--- a/public/index.html
+++ b/public/index.html
@@ -38,13 +38,16 @@
                 Escopeta: Velocidade de ataque: Médio, Dano: Muito Baixo, Alcance: Baixo, Diametro: Pequeno, Quantidade: 30
             </option>
             <option value='2'>
-                Rifle de longo alcance: Velocidade de ataque: Muito baixo, Dano: Alto, Alcance: Alto, Diametro: Médio, Quantidade: 1
+                Arco longo: Dispara uma flecha que ganha força enquanto viaja. Tempo de recarga muito alto.
             </option>
             <option value='3'>
                 Pistola de gelo: Velocidade de ataque: Médio-Alto, Dano: Baixo-Médio, Alcance: Médio, Diametro: Médio, Quantidade: 1, Efeito: Lentidão
             </option>
             <option value='4'>
                 Rifle rápida: Velocidade de ataque: Alta, Dano: Muito Baixo, Alcance: Médio, Diametro: Médio, Quantidade: 1
+            </option>
+            <option value='5'>
+                Arco boomerangue: Atira uma flecha perfurante que retorna ao chegar em seu alcance máximo.
             </option>
         </select>
 
@@ -61,7 +64,7 @@
                 Ímpeto: Recebe lentidão por um curto período de tempo para depois receber uma explosão de velocidade por um curto período de tempo.
             </option>
             <option value='2'>
-                Disparo atordoante: Dispara um grande e lento projétil que atordoa quem entrar for atingido.
+                Disparo atordoante: Dispara um  projétil que atravessa paredes e atordoa quem for atingido.
             </option>
             <option value='3'>
                 Escudo de Zitor: Ganhe um escudo por um curto período de tempo que reflete todos os projéteis que o atingirem.
@@ -96,7 +99,7 @@
                 Ímpeto: Recebe lentidão por um curto período de tempo para depois receber uma explosão de velocidade por um curto período de tempo.
             </option>
             <option value='2'>
-                Disparo atordoante: Dispara um grande e lento projétil que atordoa quem entrar for atingido.
+                Disparo atordoante: Dispara um  projétil que atravessa paredes e atordoa quem for atingido.
             </option>
             <option value='3'>
                 Escudo de Zitor: Ganhe um escudo por um curto período de tempo que reflete todos os projéteis que o atingirem.
@@ -131,7 +134,7 @@
                 Ímpeto: Recebe lentidão por um curto período de tempo para depois receber uma explosão de velocidade por um curto período de tempo.
             </option>
             <option value='2' selected>
-                Disparo atordoante: Dispara um grande e lento projétil que atordoa quem entrar for atingido.
+                Disparo atordoante: Dispara um  projétil que atravessa paredes e atordoa quem for atingido.
             </option>
             <option value='3'>
                 Escudo de Zitor: Ganhe um escudo por um curto período de tempo que reflete todos os projéteis que o atingirem.
