matches, new passives, relics

--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,9 @@
         }
 
         #form{
-            margin: 32px;
+            margin: 32px 64px;
             padding: 32px;
+            background-color: rgba(0, 0, 0, 0.2);
         }
 
         #nicknameDiv, #colorDiv{
@@ -123,6 +124,10 @@
         <div class='buildSection' id='passive1'><h3>Escolha sua segunda passiva</h3>
             <div id='passiveImages1'></div>
             <div id='passiveInfo1' class='info'></div>
+        </div>
+        <div class='buildSection' id='passive2'><h3>Escolha sua terceira passiva</h3>
+            <div id='passiveImages2'></div>
+            <div id='passiveInfo2' class='info'></div>
         </div>
 
         <p id='login' onclick="sendForm()">ENTRAR</p>
